--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "dependencies": {
     "csv-parser": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.12",
+    "prettier": "3.2.5"
+  },
+  "scripts": {
+    "tsc": "tsc"
   }
 }
